from profile page, bugs and featured have been put in dropdown panels, shortened title and content on ticket display, and moved create feature request and create bug report buttons. from bug posts page, I Changed design of search bar and added a create bug report button. from charts page, I shortened legend text to keep in clear on mobile width, kept both graphs separate from each other, added buttons for Bugs and Features, added a brief description. added a footer to all pages

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,75 +1,19 @@
-/*body {
-    font-family: Arial;
-    padding-top: 100px;
+
+.panel-group .panel {
+    margin-bottom: 30px !important;
 }
 
-footer {
-    margin-top: 40px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    border-top: 1px solid #ededed;
-    color: #A9A9A9;
+.search_bar {
+    margin: 0 0 30px 0;
 }
 
-.icon-bar {
-    background-color: #fff;
-}
-
-.accountform {
-    padding-top: 20px;
-}
-
-.badge {
-    padding-left: 9px;
-    padding-right: 9px;
-    -webkit-border-radius: 9px;
-    -moz-border-radius: 9px;
-    border-radius: 9px;
-}
-
-.label-warning[href],
-.badge-warning[href] {
-    background-color: #c67605;
-}
-
-.product {
-    background-size: contain;
-    background-position: center center;
-    background-repeat: no-repeat;
-    width: 150px;
-    height: 150px;
-    margin: 0 auto;
-}
-
-caption p {
-    word-wrap: break-word;
-}
-
-.row.row-flex {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 30px;
-}
-
-.panel-default {
-    border-color: transparent;
-    padding: 0 10px;
-}
-
-.panel-body {
-    height: 100%;
-    border: 1px solid #ddd;
-}
-
-.product-description {
-    min-height: 40px;
-}*/
 
 .finished_bugs, .in_progress_bugs {
     background-color: red;
 }
 
 .ticket {
+    height: 390px;
     padding-top: 10px;
 }
 
@@ -109,4 +53,23 @@ caption p {
 
 .comment_form_toggle {
     margin: 10px 5px 10px 10px;
+}
+
+
+/*-----------------------Charts CSS*/
+.average_graphs {
+    height: 490px
+}
+.average_graphs .graph {
+    position: relative;
+    height: 300px;
+    /*height:60vh;
+    width:120vw;*/
+}
+.vote_graphs {
+    height: 420px;
+}
+.vote_graphs .graph {
+    position: relative;
+    height: 300px;   
 }
